# frappe-modern-desk

./: README.md  pyproject.toml
modern_desk/: hooks.py  modules.txt
modern_desk/modern_desk/doctype/team_lunch/: team_lunch.js  team_lunch.json  team_lunch.py  test_team_lunch.py
modern_desk/modern_desk/page/modern_menu/: modern_menu.js  modern_menu.json
modern_desk/overrides/: switch_theme.py
modern_desk/public/css/: menu.css  theme.css
modern_desk/public/js/: custom_form_class.js  theme.js
modern_desk/public/js/menu/: page.js  router.js  workspace.js
modern_desk/public/js/team_lunch/: workflow_confirmation.js
